# proof-checker-public

./: Cargo.toml  LICENSE  License.md  Performance.md  README.md
cairo/: .cairofmtignore  README.md  Scarb.toml  cairo_project.toml
cairo/csl-examples/: bench.sh
cairo/src/: lib.cairo  pattern.cairo  stack.cairo  term.cairo  test_batch_transfer_goal.cairo  test_impreflex.cairo  test_perceptron_goal.cairo  test_svm_goal.cairo  test_transfer_goal.cairo  verifier.cairo
cpp/: README.md
cpp/include/: data_structures.hpp  shared_ptr.hpp
cpp/inputs/: input.hpp
cpp/src/: lib.hpp  main.cpp  tests.cpp
cpp/tests/: unit_tests.hpp
lurk/: README.md  basic_operations.lurk  bench.sh  bench_csl.sh  bench_pi2.sh  check_with_lurk.sh  data_structures.lurk  instantiate_in_place.lurk  lib.lurk  pattern.lurk  pattern_impl.lurk  pretty_print.lurk  term.lurk  test_apply_esubst.lurk  test_apply_ssubst.lurk  test_batch_transfer_goal.lurk  test_impreflex-compressed-goal.lurk  test_impreflex.lurk  test_instantiate.lurk  test_instantiate_fresh.lurk  test_instantiate_fresh_fail.lurk  test_pattern_e_fresh.lurk  test_pattern_s_fresh.lurk  test_perceptron_goal.lurk  test_positivity.lurk  test_publish.lurk  test_svm_goal.lurk  test_transfer_batch_1k_goal.lurk  test_transfer_goal.lurk  test_transfer_simple_compressed_goal.lurk  test_transfer_task_specific.lurk  test_universal_quantification.lurk  test_wellformedness_fresh.lurk  test_wellformedness_positive.lurk  translator.py  unit_test.lurk
lurk/csl-examples/: perceptron.lurk  svm5.lurk  transfer.lurk  transfer5000.lurk
lurk/inputs/: impreflex-compressed-goal.lurk
lurk/src/: basic_operations.lurk  instantiate_in_place.lurk  lib.lurk  pattern.lurk  pattern_impl.lurk  pretty_print.lurk
lurk/tests/: bench.sh
proofs/: propositional.ml-claim  propositional.ml-gamma  propositional.ml-proof  propositional.pretty-claim  propositional.pretty-proof  small_theory.ml-claim  small_theory.ml-gamma  small_theory.ml-proof  small_theory.pretty-claim  small_theory.pretty-gamma  small_theory.pretty-proof  substitution.ml-claim  substitution.ml-gamma  substitution.ml-proof  substitution.pretty-claim  substitution.pretty-gamma  substitution.pretty-proof  words.pretty-gamma  words.pretty-proof
proofs/generated-from-k/: double-rewrite.ml-claim  double-rewrite.ml-gamma  double-rewrite.ml-proof  double-rewrite.pretty-claim  double-rewrite.pretty-gamma  double-rewrite.pretty-proof  empty.imp5.ml-claim  empty.imp5.ml-gamma  empty.imp5.pretty-claim  (+26 more)
risc0/: Cargo.toml  bench.sh  check_with_risc0.sh
risc0/csl-examples/: Cargo.toml
risc0/csl-examples/guest/src/: perceptron.rs  transfer.rs  transfer5000.rs
risc0/csl-examples/src/: main.rs
risc0/pi2/guest/: Cargo.toml
risc0/pi2/guest/src/: main.rs
risc0/prover/: Cargo.toml
risc0/prover/guest/: Cargo.toml
risc0/prover/src/: main.rs
risc0/tests/direct-implementation/guest/: Cargo.toml
risc0/tests/direct-implementation/guest/src/: main.rs  svm5.rs  transfer.rs  transfer5000.rs
rust/: Cargo.toml
zkllvm/: CMakeLists.txt  README.md  build.sh  check_with_zkllvm.sh  translator.py
zkllvm/csl-zkllvm/: build.sh
zkllvm/csl-zkllvm/transfer/: transfer_test.cpp
zkllvm/csl-zkllvm/transfer-batch/: transfer-batch_input.json  transfer-batch_test.cpp
zkllvm/inputs/: example.inp  impreflex-compressed-goal.inp  transfer-batch-1k-goal.inp  transfer-simple-compressed-goal.inp  transfer-task-specific.inp
zkllvm/src/: CMakeLists.txt  lib.hpp  main.cpp  tests.cpp
zkllvm/tests/: bench.sh  unit_tests.hpp
zkllvm/tests/direct-implementation/batch_transfer/: batch_transfer_input.json  batch_transfer_test.cpp
zkllvm/tests/direct-implementation/perceptron/: perceptron_test.cpp
zkllvm/tests/direct-implementation/svm/: svm_input.json  svm_test.cpp
zkllvm/tests/direct-implementation/transfer/: transfer_test.cpp
zkllvm/tests/proofs-of-proofs/: batch-transfer-goal.inp  svm-goal.inp  transfer-goal.inp
(+357 files in other folders)
