[workspace]
members = ["sdc", "sdc_prover", "rust", "risc0/pi2", "risc0/tests/direct-implementation", "risc0/profiler", "risc0_prover/pi2",  "risc0_verifier/pi2", "apr"]
resolver = "2"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
