[package]
name = "guest"
version = "2.1.0"
edition = "2021"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true


[dependencies]
checker = { path = "../../../rust" }
sdc = { path = "../../../sdc" }
bincode = "1.3.3"
risc0-zkvm = { version = "0.19.1", default-features = false, features = [ "std" ] }

[workspace]
